# self-distillation

./: ACKNOWLEDGEMENTS  README.md  pyproject.toml
data_generation/: config.yaml  generate.py
data_generation/templates/: self_distillation_prompt_function.j2
evaluation/: benchmark.py  eval.py  livecodebench_utils.py
