[project]
name = "ssd-eval"
version = "0.1.0"
description = "Self-Distillation for Code Generation - Evaluation toolkit for reproducing results"
readme = "README.md"
requires-python = "==3.11.13"
license = {file = "LICENSE"}

dependencies = [
    "torch==2.8.0",
    "transformers==4.57.1",
    "numpy==2.2.6",
    "datasets==3.6.0",
    "huggingface-hub==0.36.0",
    "tqdm==4.67.1",
]

[dependency-groups]
evaluation = [
    "vllm==0.11.0",
    "scipy==1.17.0",
    "sentencepiece==0.2.1",
]
data-generation = [
    "vllm==0.11.0",
    "jinja2",
    "datasets",
    "pyarrow",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evaluation"]

[project.urls]
Repository = "https://github.com/apple/ml-ssd"
